# MastersCode

./: .gitignore  README.md  example.ipynb  partial_inverse.py  pyproject.toml  requirements.txt
INLA/: fmesher  libRblas.0.dylib  libRblas.vecLib.dylib  libRlapack.dylib  libRmath.dylib  libcrypto.1.1.dylib  libgfortran.5.dylib  libgomp.1.dylib  libgsl.28.dylib  libltdl.7.dylib  libmetis.dylib  libpardiso.dylib  libquadmath.0.dylib  libstdc++.6.dylib  panua.lic
INLA/malloc/: libmimalloc.2.1.dylib  libtcmalloc.4.dylib
custom_autograd/: __init__.py  compute_cholesky_decomposition.py  matrix_operations.py  sove_syst_and_logdet.py  sparse_structure.py
spde/: __init__.py  basis.py  inference.py  matrices.py  mesh.py  model.py  optimization.py  parameters.py  prior.py  utils.py
spde/m_tables/: m1table.csv  m2table.csv  m3table.csv  m4table.csv  mtable.csv
utils/: __init__.py  application_plotting_utils.py  scipy_torch_conversion.py  scores.py  tensor_operations.py  torch_profiling.py  various_utils.py
