[project]
name = "spde2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alphashape>=1.3.1",
    "cartopy>=0.24.1",
    "contextily>=1.6.2",
    "descartes>=1.1.0",
    "geopandas>=1.1.0",
    "gstools>=1.7.0",
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "nlopt>=2.9.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pyproj>=3.7.1",
    "rasterio>=1.4.3",
    "rpy2>=3.5.17",
    "scikit-image>=0.25.2",
    "scikit-sparse>=0.4.15",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "shapely>=2.0.7",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
